When checking for duplicate items on a Rio Karma, use the track number in addition to artist, album & title. We also turn off libkarma's duplicate-checking as it would not let these files through (and we are confident in our own duplicate checks).

BUG: 137152


svn path=/trunk/extragear/multimedia/amarok/; revision=605039